Expend Chatlog Parser to parse Attack Rolls, add structure for parsing other chatlog types, add test for attack rolls specifically